--- a/PlatziWeb/Views/Home/Index.cshtml
+++ b/PlatziWeb/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Bienvenidos a este sitio</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Aprende acerca de <a href="https://docs.microsoft.com/aspnet/core">Github e implementacion continua </a>.</p>
 </div>
