--- a/PlatziWeb/Views/Home/Index.cshtml
+++ b/PlatziWeb/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Allan Gay</h1>
+    <h1 class="display-4">Bienvenidos a este sitio</h1>
     <p>Aprende acerca de <a href="https://docs.microsoft.com/aspnet/core">Github e implementacion continua </a>.</p>
 </div>
